# rag-ai-chatbot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-build.yaml  ci-cd.yaml
0.12.10/: 6765456409689685186  8451119775790945091
backend/: Dockerfile  app.py  pyproject.toml
frontend/: pyproject.toml
rag_ai_chatbot/: README.md  docker-compose.yml  smth.py
rag_ai_chatbot/.github/workflows/: ci-build.yaml  ci-cd.yaml
rag_ai_chatbot/backend/: app.py  requirements.txt
rag_ai_chatbot/frontend/: Dockerfile  app.py  pyproject.toml
