[project]
name = "rag_ai_chatbot"   # lowercase, no dashes
version = "0.1.0"
description = "Reproducible ML project scaffold powered by uv"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "elnama17", email = "elnama.mammadova@gmail.com" }]
dependencies = [
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "fastapi>=0.114.0",
    "uvicorn>=0.23.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0"
]
